compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_function_names_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1069
expression: "external fn dupe(x) -> x = \"\" \"\"\nfn dupe() { 1 }"

---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:1
  │
1 │ external fn dupe(x) -> x = "" ""
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ First defined here
2 │ fn dupe() { 1 }
  │ ^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

